<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menuGroupLinks"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menuItemAll"
            android:title="@string/menu_navigation_all" />
        <item
            android:id="@+id/menuItemRecent"
            android:title="@string/menu_navigation_recent" />
        <item
            android:id="@+id/menuItemPublic"
            android:title="@string/menu_navigation_public" />
        <item
            android:id="@+id/menuItemPrivate"
            android:title="@string/menu_navigation_private" />
        <item
            android:id="@+id/menuItemUnread"
            android:title="@string/menu_navigation_unread" />
        <item
            android:id="@+id/menuItemUntagged"
            android:title="@string/menu_navigation_untagged" />
        <item
            android:id="@+id/menuItemTags"
            android:title="@string/menu_navigation_tags" />
    </group>
    <group
        android:id="@+id/menuGroupAccount"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menuItemAccount"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_navigation_account" />
    </group>
    <group
        android:id="@+id/menuGroupPreferences"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menuItemPreferences"
            android:icon="@drawable/ic_preferences"
            android:title="@string/menu_navigation_preferences" />
    </group>
</menu>
