<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/AppTheme.ProgressBarHorizontalStyle"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.fibelatti.pinboard.core.android.customview.EmptyListLayout
        android:id="@+id/layoutEmptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonGroupTagSorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:visibility="gone"
        app:singleSelection="true"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTagSortingAtoZ"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/tags_sorting_a_to_z"
            android:textIsSelectable="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTagSortingMoreFirst"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/tags_sorting_more_first"
            android:textIsSelectable="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTagSortingLessFirst"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/tags_sorting_less_first"
            android:textIsSelectable="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTagSortingFilter"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/tags_sorting_filter"
            android:textIsSelectable="false" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTagFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginVertical="@dimen/margin_small"
        android:hint="@string/tag_filter_hint"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTagFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:textIsSelectable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_regular"
            android:paddingBottom="@dimen/fab_offset_bottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_tag" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
