<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    tools:showIn="@layout/fragment_edit_post">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/posts_add_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/posts_add_url_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutUrl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLength="@integer/api_max_title_length"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUrlDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/posts_add_url_description"
        app:layout_constraintBottom_toTopOf="@id/togglePrivate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLength="@integer/api_max_description_length"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.fibelatti.pinboard.core.android.customview.SettingToggle
        android:id="@+id/togglePrivate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toStartOf="@id/toggleReadLater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputUrlDescription"
        app:settingTitle="@string/posts_add_private" />

    <com.fibelatti.pinboard.core.android.customview.SettingToggle
        android:id="@+id/toggleReadLater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/togglePrivate"
        app:layout_constraintTop_toBottomOf="@id/textInputUrlDescription"
        app:settingTitle="@string/posts_add_read_later" />

</androidx.constraintlayout.widget.ConstraintLayout>
